on ios fix search icon

--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -63,8 +63,7 @@
     }
 
     ~ .footer__footer-nav {
-      display: grid;
-      margin-top: 8px;
+      max-height: 600px;
     }
   }
 }
@@ -75,7 +74,9 @@
   align-items: start;
 
   @media (max-width: 768px) {
-    display: none;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease-in-out 0s;
   }
 }
 .footer-nav {
