--- a/source/sass/blocks/search.scss
+++ b/source/sass/blocks/search.scss
@@ -1,13 +1,4 @@
 .search {
-}
-.search__form {
-  display: flex;
-  align-items: center;
-  height: 32px;
-  width: 31px;
-  transition: all 0.3s ease;
-  position: relative;
-
   @media (hover) {
     &:hover {
       #search {
@@ -15,9 +6,13 @@
         box-shadow: 0 2px 8px 0 #10076812;
         border-radius: 32px;
         width: 200px;
+        padding: 0 16px;
+        opacity: 1;
       }
       .search__btn-submit {
         pointer-events: auto;
+        color: #1062fe;
+        stroke: #1062fe;
       }
     }
   }
@@ -29,59 +24,98 @@
       box-shadow: 0 2px 8px 0 #10076812;
       border-radius: 32px;
       width: 200px;
+      padding: 0 16px;
+      opacity: 1;
     }
     .search__btn-submit {
       pointer-events: auto;
+      z-index: 10;
+      color: #1062fe;
+      stroke: #1062fe;
     }
   }
+}
+
+.search__form {
+  display: flex;
+  align-items: center;
+  height: 32px;
+  width: 31px;
+  transition: all 0.3s ease;
+  position: relative;
 
   #search {
     height: 32px;
     flex: 0 0 200px;
-    width: 0;
+    width: 32px;
+    opacity: 0;
     outline: 0;
     border: 1px solid transparent;
     background: #fff;
     box-shadow: none;
     font-size: 14px;
-    padding: 0 16px;
+    padding: 0;
     transition: all 0.3s ease;
     position: absolute;
-    z-index: 5;
+    z-index: 0;
     top: 0;
     right: 0;
   }
-}
-
-.search__btn-submit {
-  flex: 0 0 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 30px;
-  height: 30px;
-  border: 0;
-  border-radius: 50%;
-  background: transparent;
-  position: relative;
-  z-index: 10;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  pointer-events: none;
-  color: #b9bdc5;
-  svg {
-    color: #b9bdc5;
+  &:active,
+  &:focus,
+  &:focus-within {
+    .search__btn-submit {
+      background: #e4e4e4;
+    }
   }
 
-  @media (hover) {
-    &:hover {
+  .search__btn-submit {
+    flex: 0 0 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    border: 0;
+    border-radius: 50%;
+    outline: 0;
+    background: transparent;
+    position: relative;
+    position: absolute;
+    z-index: 10;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    pointer-events: none;
+    color: #b9bdc5;
+    svg {
+      width: 18px;
+      height: 18px;
+      flex-shrink: 0;
+      color: #b9bdc5;
+    }
+    &:active,
+    &:focus,
+    &:focus-within {
       background: #e4e4e4;
       color: #1062fe;
       stroke: #1062fe;
-      
+
       svg {
         color: #1062fe;
         stroke: #1062fe;
+      }
+    }
+
+    @media (hover) {
+      &:hover {
+        background: #e4e4e4;
+        color: #1062fe;
+        stroke: #1062fe;
+
+        svg {
+          color: #1062fe;
+          stroke: #1062fe;
+        }
       }
     }
   }
